tests/anon_fn_capture_return_bad.hop
fn make_counter() fn() int {
	x := 0
	return fn() int {
		x += 1
		return x
	}
}
